message view: Fix spacing of last paragraph's bulleted list and quote.
Changes made in 62f2396 caused a regression where the spacing above
bulleted lists and blockquotes in the last paragraph was very small due
to an already existing separate rule for "p:last-of-type".
This commit addresses these specific cases and adds spacing that is
inline with the changes made in the aforementioned commit.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1483,6 +1483,14 @@ blockquote p {
     margin-top: -4px;
 }
 
+.rendered_markdown p:last-of-type + ul {
+    margin-top: 2px;
+}
+
+.rendered_markdown p:last-of-type + blockquote {
+    margin-top: 6px;
+}
+
 .messagebox {
     word-wrap: break-word;
     cursor: pointer;
